--- a/index.html
+++ b/index.html
@@ -47,5 +47,8 @@
               </div>
             </div>
           </div>
+
+        <!-- Adding a java script file for the button functionality -->
+        <script src="./index.js"></script>
     </body>
 </html>
